--- a/index.html
+++ b/index.html
@@ -13,7 +13,30 @@
     />
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <main class="main">
+        <div class="wrapper">
+          <div class="card">
+            <div class="card__content">
+              <h1 class="card__title">
+                Get <span>insights</span> that help your business grow.
+              </h1>
+              <p class="card__description">
+                Discover the benefits of data analytics and make better
+                decisions regarding revenue, customer experience, and overall
+                efficiency
+              </p>
+            </div>
+            <div class="card__image">
+              <img
+                src="./src/assets/images/image-header-desktop.jpg"
+                alt="Enjoying womans"
+              />
+            </div>
+          </div>
+        </div>
+      </main>
+    </div>
     <script type="module" src="/src/js/main.js"></script>
   </body>
 </html>
