--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca:wght@400;700&display=swap"
       rel="stylesheet"
     />
   </head>
@@ -26,6 +26,22 @@
                 decisions regarding revenue, customer experience, and overall
                 efficiency
               </p>
+              <div class="statistics">
+                <ul class="statistics__list">
+                  <li class="statistics__item">
+                    <p class="statistics__statistic">10k+</p>
+                    <h2 class="statistics__title">Companies</h2>
+                  </li>
+                  <li class="statistics__item">
+                    <p class="statistics__statistic">314</p>
+                    <h2 class="statistics__title">Templates</h2>
+                  </li>
+                  <li class="statistics__item">
+                    <p class="statistics__statistic">12M+</p>
+                    <h2 class="statistics__title">Queries</h2>
+                  </li>
+                </ul>
+              </div>
             </div>
             <div class="card__image">
               <img
