Work with layer
Add a image layer.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 src="./src/assets/images/image-header-desktop.jpg"
                 alt="Enjoying womans"
               />
+              <div class="layer"></div>
             </div>
           </div>
         </div>
